--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
 autopep8==1.5.6
 bcrypt==3.2.0
 bidict==0.21.2
-blinker==1.4
-cffi==1.14.5
 click==7.1.2
 dnspython==2.1.0
 email-validator==1.1.2
 Flask==1.1.2
-Flask-Admin==1.5.8
-Flask-Bcrypt==0.7.1
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-SocketIO==5.0.1
 Flask-SQLAlchemy==2.5.1
 Flask-SSLify==0.1.5
 Flask-WTF==0.14.3
-gevent==21.1.2
-gevent-websocket==0.10.1
 greenlet==1.0.0
 gunicorn==20.1.0
 idna==3.1
@@ -34,5 +25,4 @@ SQLAlchemy==1.4.11
 toml==0.10.2
 Werkzeug==1.0.1
 WTForms==2.3.3
-zope.event==4.5.0
-zope.interface==5.4.0
+numpy==1.8.1
